# nr-theses-metadata

./: .gitignore  MANIFEST.in  README.md  babel.ini  database.db  docs.yaml  model.yaml  oarepo_ui.yaml  pyproject.toml  pytest.ini  taxonomy.yaml  unsupported.yaml
.github/workflows/: main.yml
nr-theses-metadata-sample-app/: .editorconfig  AUTHORS.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  pytest.ini  run-tests.sh  setup.cfg  setup.py
nr-theses-metadata-sample-app/.github/workflows/: pypi-publish.yml  tests.yml
nr-theses-metadata-sample-app/docs/: Makefile  api.md  conf.py  configuration.md  contributing.md  index.md  make.bat  usage.md
nr-theses-metadata-sample-app/nr_theses_metadata_sample_app/: __init__.py  cli.py  config.py  version.py
nr-theses-metadata-sample-app/nr_theses_metadata_sample_app/fixtures/: __init__.py  users.py
nr-theses-metadata-sample-app/nr_theses_metadata_sample_app/records_ui/: searchapp.py
nr-theses-metadata-sample-app/nr_theses_metadata_sample_app/records_ui/views/: __init__.py  deposits.py  (+1 more)
nr-theses-metadata-sample-app/nr_theses_metadata_sample_app/theme/: views.py  webpack.py
nr-theses-metadata-sample-app/nr_theses_metadata_sample_app/upgrade_scripts/: __init__.py
nr-theses-metadata-sample-site/: .invenio  Dockerfile  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
nr-theses-metadata-sample-site/assets/less/: theme.config
nr-theses-metadata-sample-site/docker/nginx/: test.crt  test.key
nr-theses-metadata-sample-site/docker/pgadmin/: servers.json
nr_theses_metadata/: config.py  ext.py  views.py
nr_theses_metadata/jsonschemas/nr_theses_metadata/: nr-theses-metadata-v1.0.0.json
nr_theses_metadata/records/: api.py
nr_theses_metadata/records_ui/: __init__.py  base_resource.py  resource.py  searchapp.py  views.py
nr_theses_metadata/records_ui/base_to_be_moved/: __init__.py  config.py  record_template_context_component.py  resource.py  template_processor.py
nr_theses_metadata/records_ui/views/: __init__.py  detail.py
nr_theses_metadata/requests_ui/views/: __init__.py
nr_theses_metadata/resources/: config.py
nr_theses_metadata/resources/serializers/: ui.py
nr_theses_metadata/services/: config.py  facets.py  schema.py  search.py
nr_theses_metadata/theme/: resource.py  views.py  webpack.py
nusl_oai/: celery.py  transformer.py
scripts/: bootstrap.sh  build.sh  compile_catalog.sh  extract_messages.sh  import_sample_data.py  init_catalog.sh  reindex.py  runserver.sh  sample_data.yaml  update_catalog.sh
tests/: conftest.py  helpers.py  test_jsonschema.py  test_mappings.py  test_marshmallow.py  utils.py
(+85 files in other folders)
